2012-01-24 Stefan Bidigaray <stefanbidi@gmail.com>

	* GNUMakefile: Include Tests as a subproject.
	* Tests/GNUmakefile: Add 'make check'.

2012-01-24 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFURL.c: Implmented function to remove dot segments in paths.
	* Tests/CFURL/ref_resolution.m: Added an extra test.

2012-01-23 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFURL.c: Resolve URIs in CFURLCopyAbsoluteURL().
	* Source/CFString.c: Fixed a few big bugs in CFMutableString.
	* Tests/CFURL/ref_resolution.m: Added a few more tests.

2012-01-21 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFURL.c: Added a URI parser.
	* Source/GSPrivate.h: Added CHAR_V.
	* Tests/CFURL/create.m: Added a few more tests.
	* Tests/CFURL/ref_resolution.m: Tests for reference resolution.

2012-01-17 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/GNUmakefile: Remove CFPropertyList from build.
	* Source/CFURL.c: Basic work on Append functions.
	* Tests/CFURL/create.m: Add more tests.

2012-01-17 Stefan Bidigaray <stefanbidi@gmail.com>

	* Headers/CoreFoundation/CFBase.h:
	* Source/CFStringFormat.c:
	* Source/CFNumber.c:
	* Source/GSPrivate.h:
	* Source/GSHashTable.c: Fixes for 64-bit Windows.

2012-01-17 Stefan Bidigaray <stefanbidi@gmail.com>

	* Tools/: Remove make_c_interface tool.
	* Headers/CoreFoundation/CoreFoundation.h:
	* Source/GNUmakefile:
	* Source/common.mk: Remove CFStream from build for now.

2012-01-17 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFURL.c: Set correct delimiter and return an empty string
	instead of NULL for some functions just so the test suite won't crash.
	* Source/CFString.c: Fixed bug in CFStringCreateWithBytesNoCopy.
	* Source/CFBase.c: Fixed bug with kCFAllocatorNull.
	* Tests/CFURL/create.m: Ported some tests from -base.

2012-01-17 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/GSPrivate.h: Added function to guess file system encoding.
	* Source/CFURL.c: Added some more create functions.